--- a/style.css
+++ b/style.css
@@ -29,14 +29,10 @@ i {
     list-style: none;
     margin: 7px;
     margin-left: 589px;
-    /* float: left; */
 }
 
 nav ul li {
-    /* justify-content: space-between; */
     padding: 40px;
-    /* align-items: center; */
-    /* float: left; */
     color: white;
 }
 
@@ -364,4 +360,145 @@ nav ul li {
 .social-icon img {
     padding: 6px;
     align-items: center;
+}
+
+
+
+/* ---------------media query------------ */
+@media screen and (max-width:640px) {
+
+    .navbar {
+        overflow-x: auto;
+    }
+
+    .list-items {
+        margin-left: 20px;
+
+    }
+
+    nav ul li {
+        padding: 13px;
+        margin-top: 1rem;
+    }
+
+    .hero {
+        flex-direction: column;
+    }
+
+    .left img {
+        height: 300px;
+
+    }
+
+    .right {
+        text-align: center;
+        margin-left: 1rem;
+    }
+
+    .right h1 {
+        font-size: 30px;
+
+    }
+
+    .right p {
+        width: 222px;
+        font-size: 15px;
+
+
+    }
+
+    .blank {
+        display: none;
+    }
+
+    .cards ul {
+        flex-wrap: wrap;
+        left: 1rem;
+        width: 373px;
+
+
+    }
+
+    .card {
+        text-align: center;
+    }
+
+    .card-active {
+        text-align: center;
+    }
+
+    .numbers {
+        /* flex-wrap: wrap;
+        display: block;
+        left: 5rem;
+        margin-top: 40rem; */
+        display: none;
+
+    }
+
+    .line {
+        flex-wrap: wrap;
+        margin-top: 74rem;
+        text-align: center;
+
+    }
+
+    .line button {
+        margin-left: 70px;
+    }
+
+    .first-row {
+        margin-top: 3rem;
+        display: block;
+        width: 325px;
+        margin-left: 0rem;
+
+    }
+
+    .card-img img {
+        height: 155px;
+        width: 213px;
+
+
+    }
+
+    .section-4 {
+
+        text-align: center;
+        flex-direction: column;
+    }
+
+    .txt h1 {
+        width: 218px;
+        font-size: 20px;
+        margin-left: -58px;
+
+    }
+
+    .txt p {
+        margin-left: -36px;
+
+        width: 180px;
+
+    }
+
+    .section-4 button {
+        margin-left: 20px;
+    }
+
+    .section-5 ul {
+
+        margin-left: -62px;
+    }
+
+    .footer {
+        flex-direction: column;
+    }
+
+
+
+    .social-icon {
+        margin-left: 40px;
+
+    }
 }
